# Search-Engine

./: AVLTree.cpp  AVLTree.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  Project_Instructions.docx  QueryProcessor.cpp  QueryProcessor.h  README.md  main.cpp  rapidJSONExample.cpp
save_data/: organizationIndex.txt  personIndex.txt
